added hidden textarea to maintain backwards compatibility

--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <p id="score"></p>
     <p>Privacy: Data never leaves your computer, so Spanish Tools can even work offline once loaded - your data is fully secure as it never leaves your computer!</p>
     <script src="https://spanish-tools.github.io/test.js"></script>
+    <section><textarea rows="20" cols="60" id="terms" style="visibility: hidden;"></textarea></section>
 </body>
 </html>
