--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <hr>
     <p>Select an Avancemos Book 2 Lesson to quiz:</p>
     <button id="avancemosU1L2" onclick = "avancemosU1L2()">Test the Avancemos Unit 1 Lesson 2 Vocabulary, Cuéntame de tus Vacaciones!</button>
-    <button id="avancemosU1L2" onclick = "avancemosU2L2()">Test the Avancemos Unit 2 Lesson 2 Vocabulary, ¿Qué vamos a hacer?</button>
+    <button id="avancemosU1L2" onclick = "avancemosU2L2()">Test the Avancemos Unit 2 Lesson 2 Vocabulary, ¿Qué vamos a hacer? (+additional terms from the lesson)</button>
     <hr>
     <div id="test-container">
         <a href="https://studyspanish.com/typing-spanish-accents">PRO TIP for Spanish Users! Never have to copy/paste accents again!</a>
