--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <hr>
     <div id="test-container">
         <a href="https://studyspanish.com/typing-spanish-accents">PRO TIP for Spanish Users! Never have to copy/paste accents again!</a>
+        <p>Press tab during the test to quickly move between fields.</p>
     </div>
     <hr>
     <button id="grade" onclick="grade()" style="visibility:hidden">Grade me!</button>
