added us international help

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button id="avancemosU1L2" onclick = "avancemosU2L2()">Test the Avancemos Unit 2 Lesson 2 Vocabulary, ¿Qué vamos a hacer? (+additional terms from the lesson)</button>
     <hr>
     <div id="test-container">
-        <a href="https://studyspanish.com/typing-spanish-accents">PRO TIP for Spanish Users! Never have to copy/paste accents again!</a>
+        <a href="https://studyspanish.com/typing-spanish-accents">Learn how to quickly insert accents when typing.</a>
         <p>Press tab during the test to quickly move between fields.</p>
     </div>
     <hr>
