ui and terms update

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     <input type="radio" id="term2" name="term" value="term2"> English
     <hr>
     <p>Select an Avancemos Book 2 Lesson to quiz:</p>
+    <style>
+        button {display: block;}
+    </style>
     <button id="avancemosU1L2" onclick = "avancemosU1L2()">Test the Avancemos Unit 1 Lesson 2 Vocabulary, Cuéntame de tus Vacaciones!</button>
     <button id="avancemosU1L2" onclick = "avancemosU2L2()">Test the Avancemos Unit 2 Lesson 2 Vocabulary, ¿Qué vamos a hacer? (+additional terms from the lesson)</button>
+    <button id="avancemosU1L2" onclick = "avancemosReview()">Test 100 Review Verbs</button>
     <hr>
     <div id="test-container">
         <a href="https://studyspanish.com/typing-spanish-accents">Learn how to quickly insert accents when typing.</a>
@@ -26,6 +30,7 @@
     <p>Privacy: Data never leaves your computer, so Spanish Tools can even work offline once loaded - your data is fully secure as it never leaves your computer!</p>
     
     <script src="https://spanish-tools.github.io/test.js"></script>
+    
     <section><textarea rows="20" cols="60" id="terms" style="visibility: hidden;"></textarea></section>
 </body>
 </html>
