--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div id="test-container">
         <a href="https://studyspanish.com/typing-spanish-accents">Learn how to quickly insert accents when typing.</a>
         <p>Press tab during the test to quickly move between fields.</p>
+        <p>Note: The app does not mark things incorrect for spacing or capitalization errors. As long as all the letters and punctuation of the answer are present, in the correct order, the question will be marked correct.</p>
     </div>
     <hr>
     <button id="grade" onclick="grade()" style="visibility:hidden">Grade me!</button>
