flexbox visual refresh

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <button id="avancemosU1L2" onclick = "avancemosU2L2()">Test the Avancemos Unit 2 Lesson 2 Vocabulary, ¿Qué vamos a hacer? (+additional terms from the lesson)</button>
     <button id="avancemosU1L2" onclick = "avancemosReview()">Test 100 Review Verbs</button>
     <hr>
-    <div id="test-container">
+    <div id="test-container" style="display: flex; flex-direction:column; align-items:center;">
         <a href="https://studyspanish.com/typing-spanish-accents">Learn how to quickly insert accents when typing.</a>
         <p>Press tab during the test to quickly move between fields.</p>
         <p>Note: The app does not mark things incorrect for spacing or capitalization errors. As long as all the letters and punctuation of the answer are present, in the correct order, the question will be marked correct.</p>
