--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>Note: The app does not mark things incorrect for spacing or capitalization errors. As long as all the letters and punctuation of the answer are present, in the correct order, the question will be marked correct.</p>
     </div>
     <hr>
-    <button id="grade" onclick="grade()" style="visibility:hidden">Grade me!</button>
+    <button id="grade" onclick="grade()" style="visibility:hidden; margin: auto;">Grade me!</button>
     <p id="score"></p>
     <p>Privacy: Data never leaves your computer, so Spanish Tools can even work offline once loaded - your data is fully secure as it never leaves your computer!</p>
     
